<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/tvNomeClientePostoItens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/cliente" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separador"/>

    <TextView
        android:id="@+id/tvNomeUnidadePostoItens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/unidade" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separador"/>


    <TextView
        android:id="@+id/tvNomePostoItens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/posto" />

    <TextView
        android:id="@+id/tvIdPostoItens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvIdUnidadePostoItens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="id"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvIdClientePostoItens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="id"
        android:visibility="invisible" />


</LinearLayout>