<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".act.CadastroUniforme">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFuncionarioUniformes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spFuncionarioUniforme" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNrCalcado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nrCalcado"
                    android:inputType="number"
                    android:maxLength="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etQtdCalcado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/qtCalcado"
                    android:inputType="number"
                    android:maxLength="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDtCalcado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dtCalcado"
                    android:inputType="date"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNrCalca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nrCalca"
                    android:inputType="number"
                    android:maxLength="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etQtdCalca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/qtCalca"
                    android:inputType="number"
                    android:maxLength="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDtCalca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dtCalca"
                    android:inputType="date"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNrCamisa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nrCamisa"
                    android:inputType="number"
                    android:maxLength="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etQtdCamisa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/qtCamisa"
                    android:inputType="number"
                    android:maxLength="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDtCamisa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dtCamisa"
                    android:inputType="date"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNrBlusa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nrBlusa"
                    android:inputType="number"
                    android:maxLength="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etQtdBlusa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/qtBlusa"
                    android:inputType="number"
                    android:maxLength="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDtBlusa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dtBlusa"
                    android:inputType="date"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNrCobertura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nrCobertura"
                    android:inputType="number"
                    android:maxLength="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etQtdCobertura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/qtCobertura"
                    android:inputType="number"
                    android:maxLength="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDtCobertura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dtCobertura"
                    android:inputType="date"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etObsUniforme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/observacao"
                    android:inputType="textPersonName|textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>